--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   
   <head>
     <title>Web Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script>
       function setupHistory() {
