--- a/github-filename-max-255-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbccccccccccccccccccccccccccccccccccccccccccccccccccddddddddddddddddddddddddddddddddddddddddddddddddddeeeeeeeeeeeeeeeeeeeefjhijk.html
+++ b/github-filename-max-255-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbccccccccccccccccccccccccccccccccccccccccccccccccccddddddddddddddddddddddddddddddddddddddddddddddddddeeeeeeeeeeeeeeeeeeeefjhijk.html
@@ -1,18 +1,27 @@
-<html>
 
-  <head>
+<!-- saved from url=(0289)https://nginom.github.io/github-filename-max-255-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbccccccccccccccccccccccccccccccccccccccccccccccccccddddddddddddddddddddddddddddddddddddddddddddddddddeeeeeeeeeeeeeeeeeeeefjhijk.html?foo=bar2 -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Git max filename length: 255</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <script>
+		window.onload = function() {
+			let ts = new Date().getTime();
+
+			document.getElementById("mylink").href="https://nginom.github.io/github-filename-max-255-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbccccccccccccccccccccccccccccccccccccccccccccccccccddddddddddddddddddddddddddddddddddddddddddddddddddeeeeeeeeeeeeeeeeeeeefjhijk.html?ts=" + ts;
+		};
+    </script>
   </head>
 
   <body>
-    <a href="github-filename-max-255-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbccccccccccccccccccccccccccccccccccccccccccccccccccddddddddddddddddddddddddddddddddddddddddddddddddddeeeeeeeeeeeeeeeeeeeefjhijk.html">Go to github-filename-max-255-...eeeefjhijk.html</a>
+    <a id="mylink"  href="https://nginom.github.io/github-filename-max-255-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbccccccccccccccccccccccccccccccccccccccccccccccccccddddddddddddddddddddddddddddddddddddddddddddddddddeeeeeeeeeeeeeeeeeeeefjhijk.html">Go to github-filename-max-255-...eeeefjhijk.html</a>
 
     <p>
-      <p></p>
-    </p>
-    <a href="/">H O M E</a>
+      </p><p></p>
+    <p></p>
+    <a href="https://nginom.github.io/">H O M E</a>
   
-  </body>
   
-</html>
+  
+
+</body></html>
